--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,4 +1,4 @@
-.hero{
+body{
     position: relative;
 }
 
@@ -15,7 +15,7 @@
 
 .heroContent{
     position: absolute;
-    top:50%;
+    top:20%;
     left: 20%;
 }
 
@@ -38,15 +38,34 @@ button{
     margin-right: 20px;
 }
 
-/* On screens that are 720px or less, set the following */
-@media screen and (max-width: 720px) {
+
+
+/* xs: 0,
+sm: 576px,
+md: 768px,
+lg: 992px,
+xl: 1200px,
+xxl: 1400px */
+
+
+/* On screens that are 768px or less, set the following */
+@media screen and (max-width: 768px) {
     .heroContent{
-        left: 0;
+        top: 10%;
+        left: 10%;
+    }
+  }
+
+/* On screens that are 576px or less, set the following */
+@media screen and (max-width: 576px) {
+    .heroContent{
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         text-align: center;
+        top: 10%;
+        left: 0;
     }
     .heroButtons{
         display: flex;
@@ -56,4 +75,3 @@ button{
         margin: 10px auto;
     }
   }
-  
