--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -1,6 +1,6 @@
 .Portfolio{
     text-align: center;
-    margin: 90px auto;
+    margin: 90px auto 45px;
 }
 .Portfolio h1 {
     font-weight: 300;
