--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -8,10 +8,28 @@
 
 .PortfolioDes{
     margin: 25px auto;
-    max-width: 60%;
+    /* max-width: 60%; */
     font-size: larger;
 }
 
 .PortfolioBtn{
-    margin: 30px auto;
+    margin: 5px auto;
+
 }
+
+
+/* xs: 0,
+sm: 576px,
+md: 768px,
+lg: 992px,
+xl: 1200px,
+xxl: 1400px */
+
+
+/* On screens that are 768px or less, set the following */
+@media screen and (max-width: 768px) {
+    .Portfolio {
+        margin: -20px auto 45px;
+    }
+  }
+  
