--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .Footer a {
     font-size: 20px;
-    color: #aaa;
+    color: #999;
     text-decoration: none;
     cursor: pointer;
     margin: 5px;
